--- a/Edf/app/src/main/res/layout/fragment_item.xml
+++ b/Edf/app/src/main/res/layout/fragment_item.xml
@@ -5,29 +5,6 @@
               android:layout_height="wrap_content"
               android:orientation="horizontal">
 
-    <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-        <TextView
-                android:id="@+id/content2"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/text_margin"
-                android:paddingLeft="20dp"
-                android:paddingTop="20dp"
-                app:layout_constraintLeft_toRightOf="@id/content"
-                android:textAppearance="?attr/textAppearanceListItem"/>
-        <TextView
-                android:id="@+id/content"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/text_margin"
-                android:textAppearance="?attr/textAppearanceListItem"/>
-        <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
-                android:id="@+id/imageView"/>
-    </androidx.cardview.widget.CardView>
+    <include layout="@layout/fragment_card"/>
 
 </LinearLayout>
